# ucar

./: README.md
devel/: .catkin  .rosinstall
devel/include/tf/: FrameGraphRequest.h  FrameGraphResponse.h  tfMessage.h
devel/include/tf2_msgs/: FrameGraphRequest.h  FrameGraphResponse.h  LookupTransformAction.h  LookupTransformActionFeedback.h  LookupTransformActionGoal.h  LookupTransformActionResult.h  LookupTransformFeedback.h  LookupTransformGoal.h  LookupTransformResult.h  TF2Error.h  TFMessage.h
devel/include/xf_mic_asr_offline/: Get_Awake_Angle_srv.h  Get_Awake_Angle_srvRequest.h  Get_Awake_Angle_srvResponse.h  Get_Major_Mic_srv.h  Get_Major_Mic_srvRequest.h  Get_Major_Mic_srvResponse.h  Get_Offline_Result_srvRequest.h  Get_Offline_Result_srvResponse.h  Pcm_Msg.h  Set_Awake_Word_srvRequest.h  Set_Awake_Word_srvResponse.h  Set_Led_On_srvRequest.h  Set_Led_On_srvResponse.h  Set_Major_Mic_srvRequest.h  Set_Major_Mic_srvResponse.h  Start_Record_srvRequest.h  Start_Record_srvResponse.h  position.h
devel/lib/fdilink_ahrs/: ahrs_driver
devel/lib/pkgconfig/: eigen_conversions.pc  fdilink_ahrs.pc  gazebo_nav.pc  kdl_conversions.pc  reach_goal.pc  robot_pose_ekf.pc  test_tf2.pc  tf.pc  (+19 more)
src/: 523.pgm
src/gazebo_nav/: 610.pgm
src/reach_goal/: CMakeLists.txt  change.sh  dis.sh  hope.sh  last.sh  package.xml  point.yaml
src/reach_goal/src/: change_final.cpp  change_hope.cpp  change_last.cpp  dis.cpp  last.cpp  predict.py  predict1.py  rech.py  stop.py  task_goal.cpp  test.cpp
src/robot_pose_ekf/: robot_pose_ekf.launch
src/startup_scripts/: initdev_mini.sh
(+149 files in other folders)
